<resources>
    <string name="app_name">SendMessage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="etMessageText">Escribe el contenido aquí</string>
    <string name="tvTitle">SendMessage</string>
    <string name="tvView">ViewMessage</string>
    <string name="tvSender">Sender</string>
    <string name="tvTitleView">ViewMessage</string>
    <string name="btSend">Botón</string>
</resources>