<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ViewMessageActivity">


    <TextView
        android:id="@+id/tvTitleView"
        android:textColor="@color/white"
        android:textSize="@dimen/tvTitle_textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bright_sunlist"
        android:background="@color/purple_700"
        android:text="@string/tvTitleView" />

    <TextView
        android:id="@+id/tvSender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/tvSender" />

    <TextView
        android:id="@+id/tvView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tvView" />

</LinearLayout>