<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/tvTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/tvTitle_textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bright_sunlist"
        android:background="@color/purple_700"
        android:text="@string/tvTitle" />

    <EditText
        android:id="@+id/etMessageText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/etMessageText"/>

    <ImageView
        android:id="@+id/imgSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_settings"
        android:contentDescription="@null"/>

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/btSend_btPadding"
        android:layout_margin="@dimen/btSend_btMargin"
        android:text="@string/btSend"/>

</LinearLayout>